--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "watch": "watchman-make --make 'npm run' -p 'src/sass/*' -t dist:css -p 'src/html/*' -t dist:html -p 'src/images/*' -t dist:images",
     "server": "http-server dist",
     "develop": "parallelshell 'npm run watch' 'npm run server' 'npm run dist:js:watch'",
-    "deploy": "surge -p \"$(npm prefix)/dist\" -d \"tiy-2016q1-benlee-${PWD##*/}.surge.sh\""
+    "deploy": "surge -p \"$(npm prefix)/dist\" -d \"tiy-2016q1-benlee-mat-ui-orgs.surge.sh\""
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +34,7 @@
   "dependencies": {
     "jquery": "^2.2.3",
     "material-ui": "^0.15.0-alpha.2",
+    "node-font-awesome": "^1.0.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.1.1"
